4.2 2020-06-21
~~~~~~~~~~~~~~

* VISAN no longer depends on packages of the default anaconda channel, but uses
  conda-forge for its dependencies. VISAN itself is now available in the
  stcorp-forge channel.

* Fix compatibility issues with wxPython 4.1 and VTK 9.

4.1 2020-03-31
~~~~~~~~~~~~~~

* Added display of political borders in worldmap plots (using GSHHG).
  Inner lakes are now also displayed by default as these are often part
  of a political border.

* Fixed error in filedialog when trying to save an image for a plot.

* Fixed error in using spin controls (used for e.g. speed of animation plot).

4.0 2019-10-31
~~~~~~~~~~~~~~

* Upgraded all VISAN source code to be compatible with Python 3, wxPython 4,
  and VTK 8.

* VISAN is no longer a self contained application but can only be installed
  in a conda environment (using e.g. Anaconda or Miniconda).
  External dependencies of VISAN such as wxPython and VTK, but also CODA and
  HARP are no longer included with VISAN, but will now be automatically
  installed into the VISAN conda environment as external packages.
  This approach now also allows for easy addition of other python packages to
  be used in VISAN by installing them in the same conda environment.
  
* Changed Open Source licence of VISAN from GPLv2 to BSD (3-Clause).

* Updated VISAN icon and splash screen based on new Atmospheric Toolbox
  visuals.

3.20 2019-05-03
~~~~~~~~~~~~~~~

* Allow wplot() to use corner lat/lon coordinates that are [..,2] instead of
  [..,4] (i.e. representing a bounding box).

* Updated packages to the following versions:
  - CODA 2.21
  - HARP 1.6

3.19 2018-12-18
~~~~~~~~~~~~~~~

* Removed deprecated BEAT-II interfaces from VISAN.
  All examples and documentation have been converted to use HARP.

* The plot() and wplot() functions now accept harp.Variable objects as
  arguments.

* The plot() and wplot() functions can now use *_bounds variables from HARP