@@ -7,6 +7,7 @@ dependencies:
   - cmake
   - coda
   - harp
+  - proj
   - vtk
   - wxpython
   - gcc_linux-64
