@@ -7,5 +7,6 @@ dependencies:
   - cmake
   - coda
   - harp
+  - proj
   - vtk
   - wxpython
